added enums interfaces and basic table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
           </td>
           <td>
             @for (collaborator of pin.collaborators; track collaborator.email) {
-              <p>{{collaborator.name}}</p>
+              <p class="mb-0">{{collaborator.name}}</p>
             }
           </td>
           <td>{{ pin.privacy }}</td>
