customer modal added

--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,1 +1,43 @@
-<p>customer works!</p>
+
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add Customer</h4>
+    <button type="button" data-dismiss="modal" class="btn-close" (click)="modal.close()" aria-label="Close"></button>
+  </div>
+  <div class="modal-body">
+    <form #form="ngForm" [formGroup]="registerUser" (ngSubmit)="onSubmit($event)" class="form">
+      <div class="card mt-3">
+        <div class="card-body">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input id="email" type="email" formControlName="email" class="form-control"
+                   [ngClass]="{ 'is-invalid': form.submitted && registerUser.controls.email.invalid }">
+            <div *ngIf="form.submitted && registerUser.controls.email.invalid" class="text-danger">
+              <small *ngIf="registerUser.controls.email.errors?.['required']">Email is required.</small>
+              <small *ngIf="registerUser.controls.email.errors?.['email']">Email is invalid.</small>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" type="text" formControlName="name" class="form-control"
+                   [ngClass]="{ 'is-invalid': form.submitted && registerUser.controls.name.invalid }">
+<!--            <div *ngIf="form.submitted && controls.password.invalid" class="text-danger">-->
+<!--              <small *ngIf="controls.password.errors?.required">Password is required.</small>-->
+<!--            </div>-->
+          </div>
+          <div class="form-group">
+            <label for="region">Region</label>
+            <input id="region" type="text" formControlName="region" class="form-control"
+                   [ngClass]="{ 'is-invalid': form.submitted && registerUser.controls.region.invalid }">
+
+            <div *ngIf="form.submitted && registerUser.controls.region.invalid" class="text-danger">
+              <small *ngIf="registerUser.controls.region.errors?.['required']">Password is required.</small>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Add Customer</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+
