--- a/src/app/pin/create-pin/create-pin.component.html
+++ b/src/app/pin/create-pin/create-pin.component.html
@@ -1,1 +1,58 @@
-<p>create-pin works!</p>
+<div class="modal-header">
+  <h4 class="modal-title" id="modal-basic-title">Add Pin</h4>
+  <button type="button" data-dismiss="modal" class="btn-close" (click)="modal.close()" aria-label="Close"></button>
+</div>
+<div class="modal-body">
+  <form #form="ngForm" [formGroup]="pinForm" (ngSubmit)="onSubmit($event)" class="form">
+    <div class="card mt-3">
+      <div class="card-body">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input id="title" type="text" formControlName="title" class="form-control"
+                 [ngClass]="{ 'is-invalid': form.submitted && pinForm.controls.title.invalid }"
+          />
+          <div *ngIf="form.submitted && pinForm.controls.title.invalid" class="text-danger">
+            <small *ngIf="pinForm.controls.title.errors?.['required']">Title is required.</small>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="name">Customers</label>
+          <select class="form-select" multiple aria-label="Multiple select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+          <input id="name" type="text" formControlName="customers" class="form-control"
+                 [ngClass]="{ 'is-invalid': form.submitted && pinForm.controls.customers.invalid }">
+          <div *ngIf="form.submitted && pinForm.controls.customers.invalid" class="text-danger">
+            <small *ngIf="pinForm.controls.customers.errors?.['required']">Customer is required.</small>
+          </div>
+        </div>
+        <div>
+          <p class="mb-2">Privacy</p>
+          <div class="d-flex gap-3">
+            <label [class.text-danger]="form.submitted && pinForm.controls.privacy.invalid">
+              <input type="radio" value="public" formControlName="privacy">
+              <span>Public</span>
+            </label>
+            <label [class.text-danger]="form.submitted && pinForm.controls.privacy.invalid">
+              <input type="radio" value="private" formControlName="privacy">
+              <span>Private</span>
+            </label>
+            <div *ngIf="form.submitted && pinForm.controls.privacy.invalid" class="text-danger">
+              <small *ngIf="pinForm.controls.privacy.errors?.['required']">Select privacy.</small>
+            </div>
+          </div>
+
+        </div>
+        <div class="form-group">
+
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Add Pin</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
