showing table pin data as subscription

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,36 +6,5 @@
       <button (click)="openModal('pin')" class="btn btn-primary">Add Pin</button>
     </div>
   </div>
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Image</th>
-      <th scope="col">Collaborators</th>
-      <th scope="col">Privacy</th>
-    </tr>
-    </thead>
-    <tbody>
-      @for (pin of pins; track pin.title; let i = $index) {
-        <tr>
-          <td>{{ pin.title }}</td>
-          <td>
-<!--            <img-->
-<!--              [src]="'https://upload.wikimedia.org/wikipedia/commons/' + pin.flag"-->
-<!--              [alt]="'The flag of ' + pin.name"-->
-<!--              class="me-2"-->
-<!--              style="width: 20px"-->
-<!--            />-->
-            {{ pin.image }}
-          </td>
-          <td>
-            @for (collaborator of pin.collaborators; track collaborator.email) {
-              <p class="mb-0">{{collaborator.name}}</p>
-            }
-          </td>
-          <td>{{ pin.privacy }}</td>
-        </tr>
-      }
-    </tbody>
-  </table>
+  <app-pin-list></app-pin-list>
 </div>
