--- a/src/app/pin/create-pin/create-pin.component.html
+++ b/src/app/pin/create-pin/create-pin.component.html
@@ -18,17 +18,17 @@
           </div>
           <div class="form-group">
             <ng-multiselect-dropdown
-                                     placeholder="Select customers"
-                                     [data]="customers"
-                                     formControlName="customers"
+                                     placeholder="Select collaborators"
+                                     [data]="collaborators"
+                                     formControlName="collaborators"
                                      [settings]="settings"
                                      [disabled]="false"
-                                     [class.is-invalid]="form.submitted && pinForm.controls.customers.invalid"
+                                     [class.is-invalid]="form.submitted && pinForm.controls.collaborators.invalid"
             >
             </ng-multiselect-dropdown>
 
-            <div *ngIf="form.submitted && pinForm.controls.customers.invalid" class="text-danger">
-              <small *ngIf="pinForm.controls.customers.errors?.['required']">Customer is required.</small>
+            <div *ngIf="form.submitted && pinForm.controls.collaborators.invalid" class="text-danger">
+              <small *ngIf="pinForm.controls.collaborators.errors?.['required']">Customer is required.</small>
             </div>
           </div>
           <div class="form-group">
@@ -47,6 +47,15 @@
               </div>
             </div>
 
+          </div>
+          <div class="form-group">
+            <label for="image" class="form-label">Choose an image</label>
+            <input formControlName="image" (change)="onImagePicked($event)"
+                   [ngClass]="{ 'is-invalid': form.submitted && pinForm.controls.image.invalid }"
+                   class="form-control" accept="image/png" type="file" id="image">
+            <div *ngIf="form.submitted && pinForm.controls.image.invalid" class="text-danger">
+              <small *ngIf="pinForm.controls.image.errors?.['required']">Image is required.</small>
+            </div>
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-primary">Add Pin</button>
