changed to collaborator

--- a/src/app/pin/pin-list/pin-list.component.html
+++ b/src/app/pin/pin-list/pin-list.component.html
@@ -1,4 +1,5 @@
-<table class="table table-striped">
+
+<table *ngIf="pins && pins.length > 0; else noData" class="table table-striped">
   <thead>
   <tr>
     <th scope="col">Title</th>
@@ -28,3 +29,6 @@
     </ng-container>
   </tbody>
 </table>
+<ng-template #noData>
+  <p class="text-center text-muted">No Data</p>
+</ng-template>
