--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="d-flex justify-content-between align-items-end mb-3">
     <p class="display-6 mb-0">List of Pins</p>
     <div class="d-flex gap-2">
-      <button (click)="openModal('collaborator')" class="btn btn-primary">Add Customer</button>
-      <button (click)="openModal('pin')" class="btn btn-primary">Add Pin</button>
+      <button (click)="openModal('collaborator')" class="btn btn-primary">+ Add Customer</button>
+      <button (click)="openModal('pin')" class="btn btn-primary">+ Add Pin</button>
     </div>
   </div>
   <hr/>
